--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9caf91">  <td>24/05/18 17:38:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParentClass.aftermethod()[pri:0, instance:Inheritence.ChildClass@3c41ed1d]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9caf91">  <td>24/05/18 17:38:05</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParentClass.beforemethod()[pri:0, instance:Inheritence.ChildClass@3c41ed1d]">&gt;&gt;beforemethod</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="bbffcd">  <td>24/05/18 17:38:05</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage.driverInvoke()[pri:0, instance:BasicJava.LoginPage@1fa121e2]">&gt;&gt;driverInvoke</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="bbffcd">  <td>24/05/18 17:38:05</td>   <td>144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginCOLA()[pri:0, instance:BasicJava.LoginPage@1fa121e2]">loginCOLA</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="aaa28a">  <td>24/05/18 17:38:05</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChildClass.runtest()[pri:0, instance:Inheritence.ChildClass@3c41ed1d]">runtest</td> 
-  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="938063">  <td>24/06/17 16:04:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParentClass.aftermethod()[pri:0, instance:Inheritence.ChildClass@63021689]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="938063">  <td>24/06/17 16:04:09</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParentClass.beforemethod()[pri:0, instance:Inheritence.ChildClass@63021689]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="7a7f8f">  <td>24/06/17 16:04:09</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChildClass.runtest()[pri:0, instance:Inheritence.ChildClass@63021689]">runtest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
